Update: Refactor scrapingProfile + Implement createPopup + Add scanningProfiles

--- a/App/index.html
+++ b/App/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<htm>
-    <body>
-        <button id="btnscrap" > Scrapear </button>
-    </body>
-
-    <script src="./scrap.js"> </script>
-</htm>
+<html>
+  <head>
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <button id="btnScrapProfile">Scrapear perfil</button>
+    <button id="btnScrapSearch">Scrapear busqueda</button>
+  </body>
+  <script src="./scrap.js" defer></script>
+</html>
