--- a/App/index.html
+++ b/App/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
-<htm>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Scaning</title>
+        <link rel="stylesheet" href="./styles.css">
+    </head>
     <body>
-        <button id="btnscrap" > Scrapear </button>
+        <div class="container">
+           <div class="container-header">
+            <h1>Escaneo de perfil</h1>
+           </div>
+            <div class="container-form">
+                <label class="count-profile" for="count">
+                    Número de perfiles
+                </label>
+                <input id="count" type="number" name="count" value="" />
+                <button id="btnscanprofile" class="btn-scan-profile">Escanear</button>
+            </div>
+        </div>
     </body>
 
     <script src="./scrap.js"> </script>
-</htm>
+</html>
