--- a/App/index.html
+++ b/App/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <htm>
     <body>
-        <button id="btnscrap"> Scr@pear </button>
+        <button id="btnscrap"> Scrapear </button>
     </body>
 
     <script src="./scrap.js"> </script>
