--- a/App/index.html
+++ b/App/index.html
@@ -12,7 +12,7 @@
             <h1>Escaneo de perfil</h1>
            </div>
             <div class="container-form">
-                <button id="btnscanprofile" class="btn-scan-profile">Escanear</button>
+                <button id="btnscrap" class="btn-scrap-profile">Scrapear</button>
             </div>
         </div>
     </body>
